# SightReader

./: CMakeLists.txt  build.sh  configure.sh
src/: main.cpp
